# discord-clone

./: .gitignore
discord-backend/: package-lock.json  package.json  pyproject.toml
discord-backend/src/: config.py  controller.py  main.py  server.ts
discord-backend/src/controllers/: signupController.ts
discord-backend/src/models/: user.py
discord-backend/src/prisma/: schema.prisma
discord-backend/src/repositories/: __init__.py  db.py  user_repository_interactor.py  user_repository_interface.py
discord-backend/src/repositories/message/: __init__.py  message_repository_interactor.py  message_repository_interface.py
discord-backend/src/repositories/user/: __init__.py  user_repository_interactor.py  user_repository_interface.py
discord-backend/src/requests/: __init__.py  user.py
discord-backend/src/usecases/: __init__.py  message_usecase.py  user_usecase.py
discord-backend/tests/: test_discord_backend.py
discord-frontend/: app.vue  package-lock.json  package.json
discord-frontend/components/: componentProvider.ts
discord-frontend/components/atoms/add-friend-button/: component.tsx
discord-frontend/components/atoms/add-friend-dialog/: component.tsx
discord-frontend/components/atoms/button/: component.module.css  component.tsx
discord-frontend/components/layouts/app-bar/: component.module.css  component.tsx
discord-frontend/components/layouts/friend-side-bar/: component.module.css  component.tsx
discord-frontend/pages/: index.tsx
discord-frontend/pages/dashboard/: index.module.css  index.tsx
discord-frontend/utils/: socketConnection.ts
(+8 files in other folders)
